manifests/vaultwarden/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: jovian-prod
  labels:
    app: vaultwarden
    service: tools
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: vaultwarden
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      nodeSelector:
        connection: standard
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: vw-http
          protocol: TCP   
        volumeMounts:
        - name: config
          mountPath: /data
        resources:
          requests:
            memory: "75Mi"
            cpu: "100m"
          limits:
            memory: "150Mi"
            cpu: "250m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: vw-pvc
          readOnly: false
