manifests/vaultwarden/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vw-service
  namespace: jovian-prod
spec:
  selector:
    app: vaultwarden
  ports:
    - port: 80
      targetPort: vw-http
      protocol: TCP
      name: vw-http
