manifests/vaultwarden/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vw-ingress
  namespace: jovian-prod
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: vaultwarden.jovian.local.sch-apps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  vw-service
                port:
                  number: 80
